--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Guide  to DC">
+        <title>Washington D.C. City Guide</title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+        <div class="navBar">
+            <ul>
+                <li><img id="logo" src="logo.png">
+                <li>
+                <li><a class="active" href="/">Home</a></li>
+                <li><a href="#thingstodo">Things To Do</a></li>
+                <li><a href="#placestoeat">Places To Eat</a></li>
+                <li><a href="#planyourtrip">Plan Your  Trip</a></li>
+                <li class="navButton"><a href="https://www.google.com/maps/d/u/0/viewer?mid=1aPfjBcBDfEwZgz9gAndEcfowih0&ll=38.89230202276841%2C-77.04058249999997&z=15">Map</a></li>
+            </ul>
+        </div>
+        <!-- parallax -->
+        <div id="parallax1">
+        </div>
+        <div id="mission">
+            <h1>Washington DC:<br></h1>
+            <h4>Your Guide to Our Nation's Capital</h4>
+        </div>
+        <!-- map -->
+        <div class="mapouter">
+            <div class="gmap_canvas">
+                <iframe width="100%" height="530" id="gmap_canvas" src="https://maps.google.com/maps?q=washington%2C%20dc&t=&z=5&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe><a href="https://www.crocothemes.net"></a>
+            </div>
+        </div>
+        <!-- css grid for things to do -->
+        <div class="maincontent">
+            <div class="thingstodo">
+                <div id="thingstodo">
+                    <h1>THINGS TO DO </h1>
+                </div>
+                <div class="fun">
+                    <img src="P1380285.jpg">
+                    <a href="https://washington.org/find-dc-listings/sports-and-outdoor-recreation">
+                        <h2>FUN</h2>
+                    </a>
+                    <p>Get in the game. Or just kick back and watch! From enjoying professional sports to riding the bike trails, discover DC’s active side. Click below to read up on all things fun!
+                    </p>
+                </div>
+                <div class="monuments">
+                    <img src="monument.jpg">
+                    <a href="https://washington.org/find-dc-listings/monuments-memorials">
+                        <h2>MONUMENTS</h2>
+                    </a>
+                    <p>The Jefferson Memorial, the Lincoln Memorial, the Washington Monument – let’s face it, the famous monuments and memorials are why you’re here.</p>
+                </div>
+                <div class="museums">
+                    <img src="portrait1.jpg">
+                    <a href="https://washington.org/find-dc-listings/museums">
+                        <h2>MUSEUMS</h2>
+                    </a>
+                    <p>Washington, DC is in a league of its own when it comes to world-class museums, many of which are free to visit. Wander the halls of the Smithsonian Institution museums, explore cool off-the-Mall knowledge centers and discover groundbreaking exhibits and works of art right here in the nation’s capital.</p>
+                </div>
+            </div>
+            <div id="parallax2">
+            </div>
+            <div class="label">
+                <h1>PLACES TO EAT</h1>
+            </div>
+            <div id="endgradient">
+                <div class="placestoeat">
+                    <div class="foodphoto">
+                        <img id="food" src="goodfood.jpg">
+                    </div>
+                    <div class="foodcaption">
+                        <h2>RESTAURANT OF THE DAY: <br>DUKEM ETHIOPIAN RESTAURANT</h2>
+                        <p>Dukem Ethiopian Restaurant is the most enduring Ethiopian music entertainment landmark in the district. The newly expanded VIP BAR can serve you with full bar for your private use for a number of Celebrations including Birthday Parties, Graduation party and private events, with the finest Ethiopian music in town and famous singers DC has to offer.
+                            Over the past twelve years, Dukem's entertainment has reached fame both in DC and Nationally.
+                            Dukem's has been selected as best Ethiopian restaurant by Washington City Paper Readers Poll 2008, 2009, 2010 & 2011.
+                            Dukem's provides a large variety of vegetarian and non vegetarian meals, with the choice to make your food Mild, Medium or Hot. Check out all of their mouth-watering cuisine Dukem has to offer for Breakfast, Lunch and Dinner!
+                        </p>
+                        <!-- insert table here-->
+                        <table cellspacing="20px">
+                            <tr>
+                                <th>HOURS</th>
+                                <th>11AM-2AM</th>
+                            </tr>
+                            <tr>
+                                <th>PRICE</th>
+                                <th>$$</th>
+                            </tr>
+                            <tr>
+                                <th>ADDRESS</th>
+                                <th>1114-1118 U St NW, <br>Washington, DC 20009</th>
+                            </tr>
+                        </table>
+                        <a class="readmore" href="https://washington.org/places-to-eat"><br>For a list of more restaurants, click here.</a>
+                    </div>
+                </div>
+                <!-- more photos! -->
+                <div class="photogallery">
+                    <div class="daisy">
+                        <img src="P1380403.jpg">
+                    </div>
+                    <div class="alex">
+                        <img src="P1380181.jpg">
+                    </div>
+                    <div class="landscape">
+                        <img src="P1380197.jpg">
+                    </div>
+                </div>
+                <div id="planyourtrip">
+                </div>
+                <div class="form">
+                    <h1 class="white">Personalize Your D.C. Experience</h1>
+                    <p class="white">Our personal trip planners will be in contact soon to make your visit to Washington D.C. unforgettable!</p>
+                    <form action="#home" method="get">
+                        <text>First Name:</text>
+                        <input type="text" name="name" placeholder="Name" required><br><br>
+                        <text>Last Name:</text>
+                        <input type="email" name="email" placeholder="Email" required><br>
+                        <h2 class="white">Describe Your Ideal Trip</h2>
+                        <textarea type="message" rows="10" column="200" placeholder="What you like to do, who you will be travelling with, time frame, etc." required></textarea>
+                        <br>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
